# gz11

./: .bash_aliases  .gitmodules  CHANGES_GRAYSCALE_MULTIPART.md  GZ9_WIND_PLUGIN.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  WIND_FORCE_PLUGIN_EXPLAINED.md  docker-compose.yaml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
src/: CMakeLists.txt  camera2zmq.cpp  commands.txt  gps2zmq.cpp
src/demos/: CMakeLists.txt  pub.cpp  pub_img.cpp  pub_msg.cpp  sub.cpp  sub.py  sub_img.cpp  sub_img_msgpack.cpp  sub_img_multipart.cpp  sub_msg.cpp  sub_msg.py
src/test/: fly_to_100m.py  gimbal_bridge.py  test_camera.py  test_camera_msgpack.py  test_camera_new_format.py  test_pose_msgpack.py  tilt_camera.sh  wind_controller.py  wind_operator_ui.py  wind_status.py
world/: gps.world
